--- a/recipe_page/index.html
+++ b/recipe_page/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
     <head>
-        <title>Creamy Chicken Chimichangas</title>
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="https://use.typekit.net/xog2pem.css">
+        <title>Ratatouille</title>
         <meta charset=“utf-8”>
     </head>
 
     <body>
-        <header><h1>Creamy Chicken Chimichangas</h1>
+        <img src="images/rata-prep1.JPG">
+        
+        <header><h1>Ratatouille</h1>
 
-        <p>OH EM GEE, these chimichangas are the bomb. 
-            If you're not lactose-intolerant, allergic to chicken, or a vegetarian, 
-            you're about to discover a new favorite recipe. 
-            I kid you not. Holy moly, are chimichangas superior to burritos or WHAT? 
-            Just brown that tortilla and it's whole 'nother level of food experience. 
-            So light and crispy. Mmmmmmm~</p></header>
+        <p>I was initially inspired to try this dish thanks to the Pixar movie making it look so pretty. My oh my, though, this dish actually tastes delicious! It's filling, cheap, vegetarian, and nutritious. Wins all around!</p></header>
 
             <ul>
-                <li> 1 onion, diced</li>
-                <li>2 cloves garlic, minced</li>
-                <li>1 bell pepper, diced</li>
-                <li>1 jalapeño, diced</li>
-                <li>1 teaspoon salt</li>
-                <li>½ teaspoon pepper</li>
-                <li>4 cups rotisserie chicken, shredded</li>
-                <li>1 cup corn</li>
-                <li>1 teaspoon cumin</li>
-                <li>1 teaspoon paprika</li>
-                <li>8 oz cream cheese</li>
-                <li>6 flour tortillas</li>
-                <li>2 cups cheese blend</li>
-                <li>oil, for frying</li>
-                <li>sour cream, for serving</li>
-                <li>pico de gallo, for serving</li>
+                <li> 1/2 onion, diced</li>
+                <li>5 cloves garlic, minced (Really, however much garlic you like. We know how it is.)</li>
+                <li>1 red bell pepper, sliced into semi circles</li>
+                <li>1 eggplant, thinly sliced</li>
+                <li>1 zucchini, thinly sliced</li>
+                <li>1 yello squash, also thinly sliced</li>
+                <li>Your favorite pasta sauce.</li>
+                <li>4 thyme leaves (springs removed)</li>
+                <li>2 Tbsp. basil leaves, chopped</li>
+                <li>[OPTIONAL] 1/2 tsp. cinammon</li>
+                <li>1 tsp. oregano</li>
+                <li>[OPTIONAL] Parmesan, (shredded or grated)</li>
+                <li>[OPTIONAL] 1 tsp. red pepper flakes (if you like a kick)</li>
+                <li>salt</li>
+                <li>pepper</li>
+                <li>Extra-virgin olive oil</li>
+                <li>fresh basil (for garnish)</li>
             </ul>
 
             <ol>
-                <li>Add onion, garlic, bell pepper, and jalapeño to a lightly oiled sauté pan. Season with salt and pepper, then cook until
-                onions are translucent.</li>
-                <li>Once veggies are fully cooked add in chicken, corn, cumin, and paprika. 
-                    Mix together until fully combined.</li>
-                <li>Remove chicken from the heat and place in a large mixing bowl.</li>
-                <li>Add in cream cheese and mix until chicken becomes creamy.</li>
-                <li>Using a medium-sized ice cream scooper. Scoop out 2 portions of creamy chicken and place on flour tortilla. Top with
-                cheese blend then roll tightly into a burrito.</li>
-                <li>Preheat oil to 325ºF (170ºC).</li>
-                <li>Place burrito into shallow oil, flap side down to create a seal and cook for 2-3 minutes on both sides or until golden
-                brown.</li>
-                <li>Top with sour cream and pico de gallo.</li>
-                <li>Enjoy!</li>
+                <li>Preheat oven to 190C/375F.</li>
+                <li>Sautee onion, garlic,  and black pepper in olive oil until onions start to turn translucent. </li>
+                <li>Add pasta sauce to mix, let cook 5 - 10 minutes on medium heat, stirring regularly.</li>
+                <li>[OPTIONAL] At this point, you can add cinammon, red pepper flakes and/or oregano to your sauce.</li>
+                <li>Coat the bottom of your skillet or casserole dish in your sauce mixture. I recommend about 2cm or "one knuckle" deep.</li>
+                <li>Lay out your thinly sliced vegetables in alternating patterns until the whole bottom is covered.. Really, whatever looks good to you, this part is fun. </li>
+                <li>Season with salt and pepper.</li>
+                <li>Mix 3 tbsp. of olive oil with thyme, basil, and minced garlic together and drizzle, brush, or otherwise spread this mixture on top of the vegetables.</li>
+                <li>[OPTIONAL] Sprinkle grated parmesan on top to your liking.</li>
+                <li>Cover with foil.</li>
+                <li>Bake for 35-40 minutes until sauce is bubbly and vegetables are soft.</li>
+                <li>Garnish with basil, to make it extra pretty.</li>
             </ol>
     </body>
 </html>
