Added background, more styling to wrappers to improve layout,  added styling to hero image so that corners are rounded and there is a box shadow.

--- a/recipe_page/index.html
+++ b/recipe_page/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div id="wrapper">
-            <img src="images/rata-prep1.JPG">
+            <img id="hero" src="images/rata-prep1.JPG">
 
             <header>
                 <h1>Ratatouille</h1>
