Added more styling to Ingredients nad Instructions lists.

--- a/recipe_page/index.html
+++ b/recipe_page/index.html
@@ -58,42 +58,44 @@
             <div class="row">
                 <!-- INGREDIENTS LIST -->
                 <div id="ingredients" class="col-5">
+                    <div id="subhead">Ingredients</div>
                     <ul>
-                        <li> 1/2 onion<br>diced</li>
-                        <li>garlic cloves, minced (Really, however much garlic you like. We know how it is.)</li>
-                        <li>1 red bell pepper, sliced into semi circles</li>
-                        <li>1 eggplant, thinly sliced</li>
-                        <li>1 zucchini, thinly sliced</li>
-                        <li>1 yello squash, also thinly sliced</li>
-                        <li>Your favorite pasta sauce.</li>
-                        <li>4 thyme leaves (springs removed)</li>
-                        <li>2 Tbsp. basil leaves, chopped</li>
+                        <li> 1/2 onion <br><i>diced</i></li>
+                        <li>garlic cloves <br><i>minced ...and really, however much garlic you like. I know how it is.</i></li>
+                        <li>1 red bell pepper<br><i> sliced into semi circles</i></li>
+                        <li>1 eggplant<br><i> thinly sliced</i></li>
+                        <li>1 zucchini<br><i> thinly sliced</i></li>
+                        <li>1 yello squash<br><i> also thinly sliced</i></li>
+                        <li>your favorite pasta sauce</li>
+                        <li>4 thyme leaves <br><i>springs removed</i></li>
+                        <li>2 tbsp. basil leaves <br><i> chopped</i></li>
                         <li>[OPTIONAL] 1/2 tsp. cinammon</li>
                         <li>1 tsp. oregano</li>
-                        <li>[OPTIONAL] Parmesan, (shredded or grated)</li>
-                        <li>[OPTIONAL] 1 tsp. red pepper flakes (if you like a kick)</li>
+                        <li>[OPTIONAL] Parmesan <br><i> (shredded or grated)</i></li>
+                        <li>[OPTIONAL] 1 tsp. red pepper flakes<br><i>if you like a kick</i></li>
                         <li>salt</li>
                         <li>pepper</li>
-                        <li>Extra-virgin olive oil</li>
-                        <li>fresh basil (for garnish)</li>
+                        <li>extra-virgin olive oil</li>
+                        <li>fresh basil <br><i>for garnish</i></li>
                     </ul>
     </div>
 
                 <!-- INSTRUCTIONS -->
                 <div id="instructions" class="col-7">
+                    <div id="subhead">Instructions</div>
                     <ol>
-                        <li>Preheat oven to 190C/375F.</li>
-                        <li>Sautee onion, garlic,  and black pepper in olive oil until onions start to turn translucent. </li>
-                        <li>Add pasta sauce to mix, let cook 5 - 10 minutes on medium heat, stirring regularly.</li>
-                        <li>[OPTIONAL] At this point, you can add cinammon, red pepper flakes and/or oregano to your sauce.</li>
-                        <li>Coat the bottom of your skillet or casserole dish in your sauce mixture. I recommend about 2cm or "one knuckle" deep.</li>
-                        <li>Lay out your thinly sliced vegetables in alternating patterns until the whole bottom is covered.. Really, whatever looks good to you, this part is fun. </li>
-                        <li>Season with salt and pepper.</li>
-                        <li>Mix 3 tbsp. of olive oil with thyme, basil, and minced garlic together and drizzle, brush, or otherwise spread this mixture on top of the vegetables.</li>
-                        <li>[OPTIONAL] Sprinkle grated parmesan on top to your liking.</li>
-                        <li>Cover with foil.</li>
-                        <li>Bake for 35-40 minutes until sauce is bubbly and vegetables are soft.</li>
-                        <li>Garnish with basil, to make it extra pretty.</li>
+                        <li><action>Preheat oven</action> to 190C/375F.</li>
+                        <li><action>Sautee</action> onion, garlic,  and black pepper in olive oil until onions start to turn translucent. </li>
+                        <li><action>Add pasta sauce</action> to mix, let cook 5 - 10 minutes on medium heat, stirring regularly.</li>
+                        <li><action>[OPTIONAL]</action> At this point, you can add cinammon, red pepper flakes and/or oregano to your sauce.</li>
+                        <li><action>Coat</action> the bottom of your skillet or casserole dish in your sauce mixture. <br><i>I recommend about 2cm or "one knuckle" deep.</i></li>
+                        <li><action>Lay</action> out your thinly sliced vegetables in alternating patterns until the whole bottom is covered. <br><i>Alternatively, you can just throw them in there. The choice is yours!</i> </li>
+                        <li><action>Season</action> with salt and pepper.</li>
+                        <li><action>Mix</action> 3 tbsp. of olive oil with thyme, basil, and minced garlic together and drizzle, brush, or otherwise spread this mixture on top of the vegetables.</li>
+                        <li><action>[OPTIONAL]</action> Sprinkle grated parmesan on top to your liking.</li>
+                        <li><action>Cover</action> with foil.</li>
+                        <li><action>Bake</action> for 35-40 minutes until sauce is bubbly and vegetables are soft.</li>
+                        <li><action>Garnish</action> with basil, to make it extra pretty.</li>
                     </ol>
     </div>
             </div>
