--- a/game-project/index.html
+++ b/game-project/index.html
@@ -35,7 +35,7 @@
 
         <div class="currentFind">
             <h2 id="word-build"> </h2>
-            <button onclick="submitWord(); refreshLetters(); resetRecent()">Check</button>
+            <button onclick="submitWord(); refreshLetters()">Check</button>
         </div>
     </div>
     
