complete post request functions

--- a/Animal-Sighting-Tracker/public/index.html
+++ b/Animal-Sighting-Tracker/public/index.html
@@ -28,9 +28,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Oxygen&family=Train+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet">
-      
 
-    <title>React App</title>
+
+    <title>Animal Tracker</title>
   </head>
   <body>
     <script src="../src/App.js"></script>
